[package]
name = "liujip0-password-manager"
version = "0.1.0"
edition = "2024"
authors = ["liujip0"]
description = "VERY INSECURE simple password manager CLI application written in Rust. This was written as a hobby project, and please do not use it to store actual passwords!"
readme = "README.md"
repository = "https://github.com/liujip0/password-manager"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
inquire = "0.9.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.148"
toml = { version = "0.9.10", features = ["serde"] }
